# rules_nccl

./: BUILD.bazel  LICENSE  MODULE.bazel  README.md  WORKSPACE.bazel
.bcr/: metadata.template.json
nccl/: BUILD.bazel  defs.bzl  extensions.bzl  repositories.bzl
nccl/private/: BUILD.bazel  os_helpers.bzl  repositories.bzl  template_helper.bzl
nccl/private/templates/: BUILD.local_nccl_disabled  BUILD.local_nccl_shared  BUILD.nccl  defs.bzl.tpl  registry.bzl
nccl/tests/: BUILD.bazel  nccl_import_test.bzl  nccl_test.cc
