load("@bazel_skylib//:bzl_library.bzl", "bzl_library")

package(default_visibility = ["//visibility:public"])

bzl_library(
    name = "bzl_srcs",
    srcs = glob(["*.bzl"]),
    visibility = ["//visibility:public"],
    deps = ["//nccl/private:bzl_srcs"],
)

# Example usage: --@rules_nccl//nccl:runtime=@local_nccl//:nccl_runtime_static
label_flag(
    name = "runtime",
    build_setting_default = "@local_nccl//:nccl_runtime",
)